There is no longer lozenges behind the EPFL logo.

--- a/sass/theme/_header.scss
+++ b/sass/theme/_header.scss
@@ -53,6 +53,10 @@ topbar .language {
 }
 
 #epfl_logo {
+  height: 100%;
+  background-color: white;
+  float: left;
+
   img {
     display: block;
     float: left;
@@ -64,13 +68,15 @@ topbar .language {
   }
 }
 
-#sti_logo img {
+#sti_logo {
   display: block;
   float: left;
-  width: 23%;
-  max-width: 249px;
-  min-width: 190px;
-  margin: 15px 16px 0 0;
+  img {
+    width: 23%;
+    max-width: 249px;
+    min-width: 190px;
+    margin: 15px 16px 0 0;
+  }
 }
 
 /**
